# financial-persistent-reasoning

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SERVICES.md  docker-compose.yml  pyproject.toml
data/samples/: msft-10k-fy2024.html
docs/: DATA_FLOW.md  EDGAR.md
infra/neo4j/: constraints.cypher
infra/postgres/: 001_init.sql
pipeline/: orchestrator.py
scripts/: init_db.py  run_e2e.sh
services/: __init__.py
services/layer1_ingestion/: __init__.py
services/layer1_ingestion/document_parser/: service.py
services/layer1_ingestion/edgar_fetcher/: service.py
services/layer1_ingestion/section_chunker/: service.py
services/layer2_extraction/: __init__.py
services/layer2_extraction/llm_extractor/: service.py
services/layer3_reasoning/: __init__.py
services/layer3_reasoning/entity_resolver/: service.py
services/layer3_reasoning/query_api/: app.py
services/layer3_reasoning/reconciliation_engine/: service.py
shared/: __init__.py  config.py  db.py  llm_client.py  neo4j_client.py  repositories.py  section_patterns.py
shared/schemas/: __init__.py  claims.py  documents.py
tests/: test_offline.py
