[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-persistent-reasoning"
version = "0.1.0"
description = "Persistent reasoning engine for SEC filings and enterprise state"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "neo4j>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*", "pipeline*", "scripts*"]

[project.scripts]
fpr-pipeline = "pipeline.orchestrator:main"
fpr-init-db = "scripts.init_db:init_all"
